--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,25 @@ body {
   background-color: #adfafa;
 }
 
+h2{
+  text-align: center;
+}
+
 .start {
   text-align: center;
+}
+
+
+.treasure-card{
+  display: inline-block;
+  height: 200px;
+  width: 200px;
+  background-color: pink;
+  text-align: center;
+  margin-bottom: 4%;
+  margin-right: 4%;
+}
+
+.treasure-card button{
+  margin-top: 50%;
 }
